2020-10-28  Tom Tromey  <tom@tromey.com>

	PR26773
	* Makefile.am (check_PROGRAMS, TESTS): Add leb128.
	(leb128_LDADD): New variable.
	* leb128.c: New file.

2020-10-19  Mark Wielaard  <mark@klomp.org>

	* addrcfi.c (print_register): Make ops_mem 3 elements.

2020-10-19  Mark Wielaard  <mark@klomp.org>

	* testfile60.bz2: Removed.
	* Makefile.am (EXTRA_DIST): Remove testfile60.bz2.
	* run-allregs.sh: Remove tilegx testfile60 testcase.

2020-10-20  Frank Ch. Eigler  <fche@redhat.com>

	PR26756: more prometheus metrics
	* run-debuginfod-find.sh: Trigger some errors with dummy "nothing.rpm"
	and check for new metrics.

2020-09-18  Mark Wielaard  <mark@klomp.org>

	* run-readelf-compressed-zstd.sh: New test.
	* Makefile.am (EXTRA_DISTS): Add run-readelf-compressed-zstd.sh.
	(TESTS): Add run-readelf-compressed-zstd.sh if HAVE_ZSTD.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* run-readelf-frames.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-frames.sh.
	(EXTRA_DIST): Likewise.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* testfile-gnu-property-note-aarch64.bz2: New file.
	* run-readelf-n.sh: Handle testfile-gnu-property-note-aarch64.
	* Makefile.am (EXTRA_DIST): Add
	testfile-gnu-property-note-aarch64.bz2.

2020-07-19  Mark Wielaard  <mark@klomp.org>

	* asm-tst1.c: Include libebl.h after libasm.h.
	* asm-tst2.c: Likewise.
	* asm-tst3.c: Likewise.
	* asm-tst4.c: Likewise.
	* asm-tst5.c: Likewise.
	* asm-tst6.c: Likewise.
	* asm-tst7.c: Likewise.
	* asm-tst8.c: Likewise.
	* asm-tst9.c: Likewise.

2020-07-05  Mark Wielaard  <mark@klomp.org>

	* run-test-includes.sh: New test.
	* Makefile.am (TESTS): Add run-test-includes.sh.
	(EXTRA_DIST): Likewise.

2020-07-03  Alice Zhang  <alizhang@redhat.com>

	* run-debuginfod-find.sh: Add scheme free url testcase.

2020-06-19  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (TESTS): Don't add run-debuginfod-find.sh when
	DUMMY_LIBDEBUGINFOD.

2020-06-16  Mark Wielaard  <mark@klomp.org>
